--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">Recife Guide</string>
-    <string name="appFacebook_id">172490979824465</string> <!--ID DANNYLLO-->
-    <!--<string name="appFacebook_id">156443274369862</string> ID RAFAEL-->
+    <!--<string name="appFacebook_id">172490979824465</string> ID DANNYLLO-->
+    <string name="appFacebook_id">536197723244127</string> <!--ID RAFAEL-->
     <string name="error_login">Erro no login</string>
     <string name="cancel_login">Login Cancelado</string>
     <string name="logout">Encerrar Sessão</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="categoria_local">Categoria Local</string>
 
     <string name="action_settings">Settings</string>
 </resources>
